# compliance_audit_env

./: .gitignore  CRITICAL_FIXES_NEEDED.md  DEPLOYMENT_SUCCESS.md  Dockerfile  FINAL_DEPLOYMENT_STATUS.md  FINAL_STATUS.md  GITHUB_PUSH_GUIDE.md  GRADER_BOUNDS_FIX.md  GRADER_FIX_COMPLETE.md  PHASE2_GRADERS_FIX.md  README.md  READY_FOR_SUBMISSION.md  REBUILD_STATUS.md  SUBMISSION_INFO.txt  VERIFIED_LOCAL_FIX.md  __init__.py  baseline_inference.py  check_space_version.py  client.py  comprehensive_test.py  debug_remote_grader.py  debug_response.py  deep_sweep_analysis.py  diagnostic_test.py  inference.py  models.py  monitor_rebuild.py  openenv.yaml  pre_submission_check.py  push_to_huggingface.txt  pyproject.toml  quick_test.py  requirements.txt  simple_step_test.py  test_fixed_client.py  test_grader_bounds.py  test_graders.py  test_hf_space_graders.py  test_local_grader.py
outputs/: .gitkeep
server/: __init__.py  app.py  compliance_data.py  compliance_environment.py  requirements.txt
