[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-audit-env"
version = "1.0.0"
description = "A reinforcement learning environment for regulatory compliance auditing"
authors = [{name = "Kiro AI"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "requests>=2.31.0",
]
